// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/app/demo/message.tsx correctly 1`] = `
<div
  class="ant-app"
>
  <div>
    Hello World
  </div>
</div>
`;

exports[`renders ./components/app/demo/modal.tsx correctly 1`] = `
<div
  class="ant-app"
>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Open modal
    </span>
  </button>
</div>
`;

exports[`renders ./components/app/demo/notification.tsx correctly 1`] = `
<div
  class="ant-app"
>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Open Notification
    </span>
  </button>
</div>
`;
